tests/__snapshots__/validation-toBeNull-stderr.snap.txt
Error: An argument for 'source' or type argument for 'Source' must be provided.

  3 | describe("argument for 'source'", () => {
  4 |   test("must be provided", () => {
  5 |     expect().type.toBeNull();
    |     ~~~~~~
  6 |   });
  7 | });
  8 | 

      at ./__typetests__/toBeNull.tst.ts:5:5

